Some changes to show/hide containers logic

--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,8 @@
     <!-- Start point -->
     <script src="./index.js"></script>
 
+    <script src="./utils/constants.js"></script>
+
     <!-- Controls -->
     <script src="./controls/shapeControls.js"></script>
     <script src="./controls/fillAndStroke.js"></script>
